# pysymbolscanner

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stocks2.yaml  tox.ini
.github/workflows/: ci.yml  pr.yml  release.yml
src/pysymbolscanner/: __init__.py  __main__.py  command_line.py  const.py  index_definitions.py  infobox.py  scanner.py  stock.py  utils.py  wiki.py  word_score.py  yahoo.py
src/symbol_scanner/: __init__.py  index_definitions.py  scanner.py  wiki.py
tests/: test_data.json  test_definitions.py  test_score.py  test_stock.py  test_symbol_scanner.py  test_utils.py  test_wiki.py  test_yahoo.py
