[tool.poetry]
name = "pysymbolscanner"
version = "1.13.2"
description = "wiki stock information crawler"
authors = ["SlashGordon <slash.gordon.dev@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "6.0"
wptools = "0.4.17"
wikipedia = "1.4.0"
pandas = "1.5.1"
pycountry = "22.3.5"
Unidecode = "1.3.6"
uplink = "0.9.7"
pytickersymbols = "^1.13.0"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.38.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
black = "^23.11.0"
parameterized = "^0.9.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/pysymbolscanner/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "tests/ --junitxml test-results/test.xml --cov src/pysymbolscanner --cov-report term-missing"
pythonpath = ["src"]